Several improvements:
Removal of Strava dependence 
+ bug correction for the building elimination algorithm
+ addition of a SVM building classifier using SMILE learning library